--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,17 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,700');
-@import url('https://fonts.googleapis.com/css?family=Montserrat:200,400');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,700,900');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:200,400,700,900');
 :root {
   /* nav background: #262626 */
-  --nav-background: #262626;
-  --nav-text: lightgrey;
-  /* #3b1c14 */
-  --bg-about: orangered;
-  --bg-projects: #a3693a;
-  --bg-contact: #df9a57;
+  --nav-background: #2d3436;
+  --text-light: lightgrey;
+  --text-dark: rgb(54, 54, 54);
+  --bg-about: #b2bec3;
+  --bg-about: radial-gradient(circle at top left, #b1bdc2, #70858e);
+  --bg-projects: radial-gradient(circle at top right, #636e72, #40616b) ;
+  --bg-contact: #2d3436;
   --light: azure;
   --nav-shadow: 0 0px 10px rgba(0, 0, 0, 0.6);
-  --element-shadow: 3px 3px 1rem .2rem rgba(0, 0, 0, 0.25);
+  --element-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.25);
   --text-shadow: 5px 5px .2rem rgba(0, 0, 0, 0.25);
 }
 
@@ -28,6 +29,8 @@
 body {
   font-family: 'Montserrat', 'Open Sans', Helvetica, sans-serif;
   font-weight: 400;
+  background-color: black;
+  position: relative;
 }
 
 h1, h2, h3, h4, h5, h6, p, label {
@@ -70,12 +73,19 @@ h1, h2, h3, h4, h5, h6, p, label {
 }
 
 a:link, a:visited {
-  color: hsl(222, 6%, 80%);
-  color: var(--nav-text);
+  color: var(--text-light);
 }
 
 .about, .projects, .contact {
-  padding: 5rem 0;
+  padding: 3.5rem 0;
+}
+
+.section-title {
+  font-size: 2.2rem;
+  font-weight: 900;
+  padding: 1rem;
+  color: rgb(250, 250, 250);
+  text-align: center;
 }
 
 /* Navigation */
@@ -87,7 +97,6 @@ a:link, a:visited {
   margin: 0 auto;
   position: fixed;
   text-align: center;
-  transition: background 180ms ease-in;
   width: 100%;
   z-index: 1000;
   height: 4.5rem;
@@ -190,29 +199,29 @@ nav li {
 }
 
 .titlebox {
-  background: rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
-  position: absolute;
   justify-content: center;
   align-items: center;
-  top: 0; right: 0; left: 0; bottom: 0;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.55);
 }
 
 .hero-title {
   font-family: 'Montserrat';
-  font-weight: 100;
-  font-variant: small-caps;
+  color: white;
   font-size: 3.7rem;
-  letter-spacing: -2px;
   line-height: 1;
 }
 
 .hero-subtitle {
+  font-family: 'Montserrat';
   font-size: 2rem;
   font-weight: 100;
   letter-spacing: -2px;
 }
+
+/* /Hero Section */
 
 /* About */
 
@@ -234,12 +243,20 @@ nav li {
   margin: .75rem 2rem;
 }
 
+.about-title, .about-subtitle {
+  color: rgba(25, 25, 25, .8);
+}
+
+.about-subtitle {
+  color: rgba(250, 250, 250, .8);
+  font-size: 1rem;
+  font-weight: 600;
+}
+
 .profile-pic {
- margin: 3em 0;
- width: 200px;
- border-radius: 100%;
- border:  4px beige solid;
- transition: transform 200ms ease-out;
+  margin: 3em 0;
+  width: 200px;
+  border-radius: 100%;
 }
 
 .fa-html5 {
@@ -259,6 +276,7 @@ nav li {
 }
 
 i {
+  margin-bottom: .75rem;
   transition: transform 100ms ease-out;
 }
 
@@ -270,32 +288,33 @@ i:hover {
 
 #projects {
   margin: 0 auto;
-  text-align: center;
+  text-align: left;
   background: var(--bg-projects);
   padding: 3rem 0 1rem;
 }
 
 .row {
-  margin: 6rem 0;
+  margin: 5.5rem 0;
+}
+
+.row a {
+  display: block;
+  margin: 0 auto;
 }
 
 .img-description {
-  margin: 0 auto;
-  padding: 1.5rem 12% 0;
-  text-align: justify;
+  max-width: 450px;
+  padding: 1.5rem;
+  line-height: 1.7;
   font-size: 1em;
-}
-
-.section-title {
-  font-size: 2rem;
-  font-weight: 100;
-  padding: 1rem;
-  text-align: center;
+  margin: 0 auto;
 }
 
 .project-pic {
-  width: 95%;
+  width: 100%;
   max-width: 400px;
+  margin: 0 auto;
+  display: block;
   border-radius: 5px;
   transition: transform 125ms ease;
 }
@@ -315,6 +334,7 @@ form {
   grid-template-columns: 1fr 1fr;
   grid-row-gap: 1rem;
   margin: 0 auto;
+  padding: 0 .5rem;
 }
 
 label {
@@ -328,11 +348,12 @@ label {
   border-radius: 5px;
   font-family: inherit;
   font-size: 1rem;
-  padding: 0.45rem;
+  padding: 0.3rem;
   border: none;
   margin: 1rem .25rem;
   vertical-align: middle;
-  width: 300px;
+  max-width: 100%;
+  resize: vertical;
 }
     /* Submit Button */
 #submit {
@@ -433,21 +454,25 @@ footer h6 a:link {
   }
 
   .project-pic {
-    width: 400px;
+    width: 100%;
   }
 
   .gallery {
     padding: 2em;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 3.5rem;
   }
+
   .row {
-    display: flex;
-    margin: 6rem 0;
+    margin: 0;
   }
+
   .img-description {
     align-self: center;
     display: inline-block;
-    padding: 1.5rem 1.5rem;
   }
+
   form {
     max-width: 300px;
   }
