--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,16 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,700,900');
+/* @import url('https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,700,900');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:200,400,700,900');
-@import url('https://fonts.googleapis.com/css?family=Poppins:100,200,400,700,900');
+@import url('https://fonts.googleapis.com/css?family=Poppins:100,200,400,700,900'); */
 
 :root {
-  /* nav background: #262626 */
-  --nav-background: #2d3436;
+  --nav-background: #f6f6f6;
   --text-light: rgba(255, 255, 255, 1);
   --text-dark: rgb(54, 54, 54);
-  --bg-about: #b2bec3;
-  --bg-about: radial-gradient(circle at bottom left,#313c41, #0e1e25);
-  /* --bg-projects: radial-gradient(circle at top right, #0b1b20, #40616b); */
+  /* --bg-about: #b2bec3; */
+  /* --bg-about: radial-gradient(circle at bottom left,#313c41, #0e1e25); */
+  --bg-about: #eee;
   --bg-projects: darkslategrey;
   --bg-contact: #2d3436;
-  --light: rgba(255, 255, 255, 1);
   --nav-shadow: 0 0px 10px rgba(0, 0, 0, 0.6);
   --element-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.25);
   --text-shadow: 5px 5px .2rem rgba(0, 0, 0, 0.25);
@@ -27,33 +25,21 @@
 }
 
 body {
-  font-family: 'Poppins', 'Montserrat', 'Open Sans', 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
   font-weight: 400;
   background-color: black;
   position: relative;
 }
 
 h1, h2, h3, h4, h5, h6, p, label {
-  color: var(--light);
-  font-weight: 400;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  color: var(--text-dark);
+  /* font-weight: 400; */
 }
 
 /* DRY Classes */
 
-.box-shadow {
-  box-shadow: var(--element-shadow);
-}
-
 .text-shadow {
   text-shadow: var(--text-shadow);
-}
-
-.txtctr {
-  text-align: center;
 }
 
 .icon-size {
@@ -73,7 +59,7 @@ h1, h2, h3, h4, h5, h6, p, label {
 }
 
 a:link, a:visited {
-  color: var(--text-light);
+  color: var(--text-dark);
 }
 
 .about, .projects, .contact {
@@ -92,14 +78,14 @@ a:link, a:visited {
   display: flex;
   justify-content: center;
   background: var(--nav-background);
-  box-shadow: var(--nav-shadow);
   margin: 0 auto;
-  position: sticky;
+  position: fixed;
   top: 0;
   text-align: center;
   width: 100%;
   z-index: 1000;
   height: 4.5rem;
+  box-shadow: 0px 1px 9px 0px rgba(0, 0, 0, 0.25);
 }
 
 .nav-toggle {
@@ -118,7 +104,7 @@ a:link, a:visited {
 }
 /* Nav Hamburger Button */
 .nav-toggle-label span, .nav-toggle-label span::before, .nav-toggle-label span::after {
-  background: rgba(255, 255, 255, 1);
+  background: var(--text-dark);
   border-radius: 3px;
   cursor: pointer;
   display: block;
@@ -167,7 +153,7 @@ nav li {
 .logo {
   display: inline-block;
   font-size: 1.5em;
-  font-weight: 400;
+  font-weight: 200;
   padding: .5em 1em;
   text-align: center;
   align-self: center;
@@ -175,9 +161,9 @@ nav li {
 
 .nav-item {
   text-decoration: none;
-  font-weight: 400;
+  font-weight: 200;
   font-size: 1.2em;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   opacity: 0;
   transition: opacity 150ms ease-in-out;
 }
@@ -195,7 +181,9 @@ nav li {
 
 .hero {
   height: 100vh;
-  background: center / cover no-repeat url("../img/city_skyline_web.jpeg");
+  /* background: center / cover no-repeat url("../img/city_skyline_web.jpeg"); */
+  /* background: radial-gradient(circle at bottom left, rgba(25, 25, 25, 1), rgba(255, 255, 255, 0.2)); */
+  background: center / cover no-repeat url("https://images.pexels.com/photos/2120040/pexels-photo-2120040.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
 }
 
 .titlebox {
@@ -208,11 +196,21 @@ nav li {
 }
 
 .hero-title {
-  font-family: 'Poppins', 'Montserrat', 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
   color: white;
   font-size: 3.7rem;
+  font-weight: 100;
   line-height: 1;
   transition: transform 320ms ease-out;
+}
+
+.hero-title span {
+  color: #bbb;
+  letter-spacing: 0px;
+  font-weight: 300;
+  margin-left: 2rem;
+  position: relative;
+  top: -0.75rem;
 }
 
 .hero-subtitle {
@@ -227,6 +225,7 @@ nav li {
 /* About */
 
 .about {
+  min-height: 90vh;
   text-align: center;
   background: var(--bg-about);
   position: relative;
@@ -241,12 +240,17 @@ nav li {
   margin: 0 auto;
 }
 
+.about ul {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
 .about ul li {
   margin: .75rem 2rem;
 }
 
 .about-title, .about-subtitle {
-  color: rgba(255, 255, 255, 1);
+  color: var(--text-dark);
 }
 
 .about-subtitle {
@@ -258,6 +262,8 @@ nav li {
   margin: 3em 0;
   width: 200px;
   border-radius: 50%;
+  /* padding: 0.25rem; */
+  border: 4px rgba(0, 0, 0, 0.45) solid;
 }
 
 .fa-html5 {
@@ -303,11 +309,17 @@ i:hover {
 
 /* Projects */
 
-#projects {
+.projects {
   margin: 0 auto;
   text-align: left;
-  background: var(--bg-projects);
+  /* background: center / cover no-repeat url("https://images.pexels.com/photos/1820563/pexels-photo-1820563.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"); */
+  background: rgb(54,53,53);
+  background: radial-gradient(circle, rgba(54,53,53,1) 0%, rgba(27,27,27,1) 100%);
   padding: 3rem 0 1rem;
+}
+
+.projects h2, .projects p {
+  color: white;
 }
 
 .row {
@@ -337,19 +349,23 @@ i:hover {
 }
 
 .project-pic:hover {
-  transform: scale(1.05);
+  transform: translateY(-5px);
 }
 
 /* Contact */
 
 .contact {
-  background: var(--bg-contact);
+  background: center / cover no-repeat url("https://images.pexels.com/photos/1166643/pexels-photo-1166643.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.25);
+}
+
+.contact h2, .contact label {
+  color: white;
 }
     /* FORM */
 form {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-row-gap: 1rem;
+  display: flex;
+  flex-direction: column;
   margin: 0 auto;
   padding: 0 .5rem;
 }
@@ -372,7 +388,7 @@ label {
   margin: 1rem .25rem;
   max-width: 100%;
   resize: none;
-  background: rgba(255, 255, 255, 0.025);
+  background: rgba(255, 255, 255, 0.85);
   box-shadow: 1px 5px 5px -5px rgba(0, 0, 0, 0.5);
 }
     /* Submit Button */
@@ -393,7 +409,7 @@ label {
 }
 
 .submit-btn:hover {
-  background-color: hsl(0, 0%, 75%);
+  background-color: hsl(0, 0%, 85%);
 }
 
 /* Footer */
@@ -405,7 +421,8 @@ footer {
   text-align: center;
 }
 
-footer p {
+footer p, footer h6 {
+  color: white;
   font-size: .7rem;
   padding: 1rem 0;
 }
@@ -453,17 +470,17 @@ footer h6 a:link {
     margin-bottom: 0;
   }
   .nav-item::before {
-    background: rgba(255, 255, 255, 1);
+    background: var(--text-dark);
     content: '';
     display: block;
-    height: 5px;
+    height: 2px;
     position: absolute;
     top: -.5rem;
     left: 0;
     right: 0;
     opacity: 0;
     transform: scale(0, 1);
-    transition: transform ease-in-out 250ms, opacity ease-in-out 250ms;
+    transition: transform ease-in-out 150ms, opacity ease-in-out 150ms;
   }
   .nav-item:hover::before {
     transform: scale(1, 1);
