--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,700,900');
-@import url('https://fonts.googleapis.com/css?family=Montserrat:200,400,700,900');
-@import url('https://fonts.googleapis.com/css?family=Poppins:100,200,400,700,900'); */
-
 :root {
   --nav-background: #f6f6f6;
   --text-light: rgba(255, 255, 255, 1);
@@ -43,7 +39,7 @@ h1, h2, h3, h4, h5, h6, p, label {
 }
 
 .icon-size {
-  font-size: 4rem;
+  font-size: 6rem;
 }
 
 .block {
@@ -203,6 +199,7 @@ nav li {
   position: relative;
   top: -8%;
   transition: transform 320ms ease-out;
+  user-select: none;
 }
 
 .hero-title span {
@@ -359,6 +356,9 @@ i {
 .project-pic {
   width: 95%;
   max-width: 500px;
+  max-height: 325px;
+  object-fit: cover;
+  object-position: top;
   margin: 0 auto;
   display: block;
   border-radius: 3px;
@@ -530,9 +530,13 @@ footer h6 a:link {
     position: relative;
   }
 
+  .icon-size {
+    font-size: 4rem;
+  }
+
   .about::before {
     content: '';
-    background: radial-gradient(circle at top left, slateblue, rgb(53, 35, 170));
+    background: radial-gradient(circle at top left, rgb(53, 35, 170), rgba(53, 35, 170, 0.7));
     -webkit-clip-path: polygon(0 0, 0% 100%, 100% 0);
     clip-path: polygon(0 0, 0% 100%, 100% 0);
     width: 500px;
@@ -544,7 +548,7 @@ footer h6 a:link {
 
   .about::after {
     content: '';
-    background: radial-gradient(circle at top left, rgb(53, 35, 170), slateblue);
+    background: radial-gradient(circle at bottom right, rgb(53, 35, 170), rgba(53, 35, 170, 0.7));
     -webkit-clip-path: polygon(100% 0, 0% 100%, 100% 100%);
     clip-path: polygon(100% 0, 0% 100%, 100% 100%);
     width: 500px;
