--- a/css/style.css
+++ b/css/style.css
@@ -411,20 +411,28 @@ i {
 .project-links {
   display: flex;
   align-items: center;
+  max-width: 75%;
+  margin: auto;
 }
 
-.project-links a, .project-icon-github {
-  color: white;
+.live-site {
+  background: white;
+  color: black;
+  padding: .4rem;
+  border-radius: 3px;
+  transition: 250ms ease;
+  cursor: pointer;
 }
 
 .project-links a {
+  color: black;
   font-weight: 300;
 }
 
 .project-icon-github {
+  color: white;
   font-size: 3rem;
 }
-
 
 /* Contact */
 
@@ -649,8 +657,10 @@ footer h6 a:link {
   }
 
   .project-links {
+    max-width: 100%;
     background: transparent;
     opacity: 0;
+    justify-content: space-around;
     position: absolute;
     top: 35%;
     right: 0;
@@ -672,13 +682,7 @@ footer h6 a:link {
     letter-spacing: 1px;
   }
 
-  .live-site {
-    background: white;
-    padding: .4rem;
-    border-radius: 3px;
-    transition: 250ms ease;
-    cursor: pointer;
-  }
+ 
   
   .project-icon-github {
     color: white;
