--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,15 @@
+$white: rgba(255, 255, 255, 1);
+$navBackground: rgb(246, 246, 246);
+$textLight: rgb(54, 54, 54);
+$textDark: rgb(54, 54, 54);
+$bgAbout: rgb(238, 238, 238);
+$bgProjects: radial-gradient(circle, rgba(54,53,53,1) 0%, rgba(27,27,27,1) 100%);
+$bgContact: rgb(45, 52, 54);
+$iconSizeLg: 6rem;
+$iconSizeSm: 4rem;
+
 *, *::before, *::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -10,16 +19,16 @@
 body {
   font-family: 'Helvetica Neue', Helvetica, sans-serif;
   font-weight: 400;
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   position: relative;
 }
 
 h1, h2, h3, h4, h5, h6, p, label {
-  color: #363636;
+  color: $textDark;
 }
 
 .icon-size {
-  font-size: 6rem;
+  font-size: $iconSizeLg;
 }
 
 .container {
@@ -28,7 +37,7 @@ h1, h2, h3, h4, h5, h6, p, label {
 }
 
 a:link, a:visited {
-  color: #363636;
+  color: $textDark;
 }
 
 .about, .projects, .contact {
@@ -44,13 +53,9 @@ a:link, a:visited {
 
 /* Navigation */
 .nav-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  background: #f6f6f6;
+  justify-content: center;
+  background: $navBackground;
   margin: 0 auto;
   position: fixed;
   top: 0;
@@ -58,8 +63,7 @@ a:link, a:visited {
   width: 100%;
   z-index: 1000;
   height: 4.5rem;
-  -webkit-box-shadow: 0px 1px 9px 0px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 1px 9px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 1px 9px 0px rgba(0, 0, 0, 0.25);
 }
 
 .nav-toggle {
@@ -68,11 +72,7 @@ a:link, a:visited {
 
 .nav-toggle-label {
   cursor: pointer;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  align-items: center;
   display: flex;
   height: 100%;
   margin-left: 1em;
@@ -80,10 +80,9 @@ a:link, a:visited {
   top: 0;
   left: 0;
 }
-
 /* Nav Hamburger Button */
 .nav-toggle-label span, .nav-toggle-label span::before, .nav-toggle-label span::after {
-  background: #363636;
+  background: $textDark;
   border-radius: 3px;
   cursor: pointer;
   display: block;
@@ -106,20 +105,15 @@ a:link, a:visited {
 }
 
 .nav-menu {
-  background: #f6f6f6;
+  background: $navBackground;
   text-align: left;
   padding-top: .5em;
   position: absolute;
   left: 0;
   top: 100%;
-  -webkit-transform: scale(1, 0);
-          transform: scale(1, 0);
-  -webkit-transition: -webkit-transform 300ms ease-in-out;
-  transition: -webkit-transform 300ms ease-in-out;
+  transform: scale(1, 0);
   transition: transform 300ms ease-in-out;
-  transition: transform 300ms ease-in-out, -webkit-transform 300ms ease-in-out;
-  -webkit-transform-origin: top;
-          transform-origin: top;
+  transform-origin: top;
   width: 100%;
 }
 
@@ -129,9 +123,7 @@ a:link, a:visited {
   font-weight: 200;
   padding: .5em 1em;
   text-align: center;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  align-self: center;
 }
 
 .nav-item {
@@ -139,46 +131,35 @@ a:link, a:visited {
   font-weight: 200;
   font-size: 1.2em;
   opacity: 0;
-  -webkit-transition: opacity 150ms ease-in-out;
   transition: opacity 150ms ease-in-out;
   margin-bottom: 1rem;
   margin-left: 1rem;
 }
 
 .nav-toggle:checked ~ nav {
-  -webkit-transform: scale(1, 1);
-          transform: scale(1, 1);
+  transform: scale(1, 1);
 }
 
 .nav-toggle:checked ~ nav .nav-item {
   opacity: 1;
-  -webkit-transition: opacity 250ms ease-in-out 200ms;
   transition: opacity 250ms ease-in-out 200ms;
 }
 
 /* Hero section */
+
 .hero {
   height: 100vh;
-  background: center/cover no-repeat url("https://images.pexels.com/photos/2120040/pexels-photo-2120040.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  background: center / cover no-repeat url("https://images.pexels.com/photos/2120040/pexels-photo-2120040.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
   position: relative;
 }
 
 .titlebox {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
-  background: radial-gradient(circle at 100% 50%, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.85));
+  background: radial-gradient(circle at 100% 50%, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, .85) );
 }
 
 .hero-text-container {
@@ -187,24 +168,18 @@ a:link, a:visited {
 }
 
 .hero-text-container:hover .developer {
-  color: #3523aa;
+  color: rgb(53, 35, 170);
 }
 
 .hero-title {
   font-family: 'Helvetica Neue', Helvetica, sans-serif;
-  color: white;
+  color: rgba(255, 255, 255, 1);
   font-size: 3.7rem;
   font-weight: 100;
   text-align: left;
   line-height: 1;
-  -webkit-transition: opacity 500ms ease, -webkit-transform 990ms ease-out;
-  transition: opacity 500ms ease, -webkit-transform 990ms ease-out;
   transition: transform 990ms ease-out, opacity 500ms ease;
-  transition: transform 990ms ease-out, opacity 500ms ease, -webkit-transform 990ms ease-out;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  user-select: none;
 }
 
 .developer {
@@ -215,23 +190,20 @@ a:link, a:visited {
   margin-left: 2rem;
   position: relative;
   top: -0.75rem;
-  -webkit-transition: color 200ms ease-out;
   transition: color 200ms ease-out;
-  -webkit-animation: slide-in 1500ms ease-in-out 1;
-          animation: slide-in 1500ms ease-in-out 1;
+  animation: slide-in 1500ms ease-in-out 1;
 }
 
 .hero-title:hover .developer {
-  -webkit-transform: translateX(-1rem);
-          transform: translateX(-1rem);
+  transform: translateX(-1rem);
 }
 
 .hero-title:hover .developer {
-  color: #3523aa;
+  color: rgb(53, 35, 170);
 }
 
 .hero-subtitle {
-  color: white;
+  color: rgba(255, 255, 255, 1);
   line-height: 1.5;
   font-size: 1rem;
   font-weight: 200;
@@ -244,11 +216,13 @@ a:link, a:visited {
 }
 
 /* /Hero Section */
+
 /* About */
+
 .about {
   min-height: 90vh;
   text-align: center;
-  background: #eeeeee;
+  background: $bgAbout;
   position: relative;
 }
 
@@ -273,7 +247,7 @@ a:link, a:visited {
 }
 
 .about-title, .about-subtitle {
-  color: #363636;
+  color: $textDark;
 }
 
 .about-subtitle {
@@ -322,11 +296,11 @@ a:link, a:visited {
   height: 4rem;
   display: block;
   margin: 0 auto 1rem;
-  background: center/contain no-repeat url("../img/express.svg");
+  background: center / contain no-repeat url('../img/express.svg');
 }
 
 .fa-node, .fa-npm {
-  color: #90c63d;
+  color: rgb(144,198,61);
 }
 
 .ruby {
@@ -334,7 +308,7 @@ a:link, a:visited {
   height: 4rem;
   display: block;
   margin: 0 auto 1rem;
-  background: center/cover no-repeat url("../img/ruby.png");
+  background: center / cover no-repeat url('../img/ruby.png');
 }
 
 .aws {
@@ -342,7 +316,7 @@ a:link, a:visited {
   height: 4rem;
   display: block;
   margin: 0 auto 1rem;
-  background: center/contain no-repeat url("../img/aws.svg");
+  background: center / contain no-repeat url('../img/aws.svg');
 }
 
 .slack {
@@ -350,36 +324,30 @@ a:link, a:visited {
   height: 4rem;
   display: block;
   margin: 0 auto 1rem;
-  background: center/contain no-repeat url("../img/slack.svg");
+  background: center / contain no-repeat url('../img/slack.svg');
 }
 
 i {
   margin-bottom: .75rem;
-  -webkit-transition: -webkit-transform 100ms ease-out;
-  transition: -webkit-transform 100ms ease-out;
   transition: transform 100ms ease-out;
-  transition: transform 100ms ease-out, -webkit-transform 100ms ease-out;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  user-select: none;
 }
 
 .about ul li:hover i {
-  -webkit-transform: translateY(-5px);
-          transform: translateY(-5px);
+  transform: translateY(-5px);
 }
 
 /* Projects */
+
 .projects {
   margin: 0 auto;
   text-align: left;
-  background: radial-gradient(circle, #363535 0%, #1b1b1b 100%);
+  background: $bgProjects;
   padding: 3rem 0 1rem;
 }
 
 .projects h2, .projects p {
-  color: white;
+  color: rgba(255, 255, 255, 1);
 }
 
 .row {
@@ -403,33 +371,23 @@ i {
   width: 95%;
   max-width: 500px;
   max-height: 325px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: top;
-     object-position: top;
+  object-fit: cover;
+  object-position: top;
   margin: 0 auto 1rem;
   display: block;
   border-radius: 3px;
-  -webkit-transition: -webkit-transform 125ms ease;
-  transition: -webkit-transform 125ms ease;
   transition: transform 125ms ease;
-  transition: transform 125ms ease, -webkit-transform 125ms ease;
 }
 
 .project-links {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   max-width: 75%;
   margin: auto;
-}
-
-.project-links a {
-  color: black;
-  font-weight: 300;
+  a {
+    color: black;
+    font-weight: 300;
+  }
 }
 
 .live-site {
@@ -437,10 +395,14 @@ i {
   color: black;
   padding: .4rem;
   border-radius: 3px;
-  -webkit-transition: 250ms ease;
   transition: 250ms ease;
   cursor: pointer;
 }
+
+// .project-links a {
+//   color: black;
+//   font-weight: 300;
+// }
 
 .project-icon-github {
   color: white;
@@ -448,36 +410,27 @@ i {
 }
 
 /* Contact */
+
 .contact {
-  background: center/cover no-repeat url("https://images.pexels.com/photos/1166643/pexels-photo-1166643.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
-  -webkit-box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.25);
-          box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.25);
+  background: center / cover no-repeat url("https://images.pexels.com/photos/1166643/pexels-photo-1166643.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.25);
 }
 
 .contact h2, .contact label {
-  color: white;
+  color: rgba(255, 255, 255, 1);
 }
-
-/* FORM */
+    /* FORM */
 form {
   max-width: 90%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   margin: 0 auto;
   padding: 0 .5rem;
 }
 
 label {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-item-align: center;
-      align-self: center;
+  align-self: center;
   font-size: 1rem;
   margin: 0;
   text-align: left;
@@ -487,7 +440,7 @@ label {
   border-radius: 5px;
   font-family: inherit;
   font-size: 1rem;
-  color: black;
+  color: rgba(0, 0, 0, 1);
   padding: 0.75rem;
   border: none;
   margin: 1rem auto;
@@ -495,42 +448,36 @@ label {
   max-width: 400px;
   resize: none;
   background: rgba(255, 255, 255, 0.85);
-  -webkit-box-shadow: 1px 5px 5px -5px rgba(0, 0, 0, 0.5);
-          box-shadow: 1px 5px 5px -5px rgba(0, 0, 0, 0.5);
+  box-shadow: 1px 5px 5px -5px rgba(0, 0, 0, 0.5);
 }
-
-/* Submit Button */
+    /* Submit Button */
 .submit-btn {
   color: black;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   padding: 0.75rem;
   width: 150px;
   grid-column: span 2;
   margin: 0 auto 1rem;
-  -webkit-transition: background-color 150ms ease-out;
   transition: background-color 150ms ease-out;
   background-color: #eee;
 }
 
 .submit-btn:hover {
-  background-color: #d9d9d9;
+  background-color: hsl(0, 0%, 85%);
 }
+
 
 .email {
   color: white;
   padding: 1rem 0;
   text-align: center;
 }
-
 /* Footer */
+
 footer {
   padding: .5rem;
   background-color: #262626;
@@ -539,12 +486,12 @@ footer {
 }
 
 footer p, footer h6 {
-  color: white;
+  color: rgba(255, 255, 255, 1);
   font-size: .7rem;
   padding: 1rem 0;
 }
 
-footer:hover, footer h6 a:hover {
+footer:hover,footer h6 a:hover {
   color: #eee;
 }
 
@@ -566,53 +513,35 @@ footer h6 a:link {
     display: none;
   }
   .nav-header {
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr auto minmax(600px, 3fr) 1fr;
-        grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr;
+    grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr;
   }
   .logo {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
     grid-column: 2 / span 1;
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
+    align-self: center;
   }
   .nav-menu {
     all: unset;
-    -ms-grid-column: 3;
-    -ms-grid-column-span: 1;
     grid-column: 3 / 4;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: flex-end;
+    align-items: center;
   }
   .nav-item {
     opacity: 1;
     position: relative;
   }
   .nav-menu ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
+    justify-content: flex-end;
   }
   .nav-menu li {
     margin-left: 3em;
     margin-bottom: 0;
   }
   .nav-item::before {
-    background: #363636;
-    background: #3523aa;
+    background: $textDark;
+    background: rgb(53, 35, 170);
     content: '';
     display: block;
     height: 3px;
@@ -621,43 +550,43 @@ footer h6 a:link {
     left: 0;
     right: 0;
     opacity: 0;
-    -webkit-transform: scale(0, 1);
-            transform: scale(0, 1);
-    -webkit-transition: opacity ease-in-out 150ms, -webkit-transform ease-in-out 150ms;
-    transition: opacity ease-in-out 150ms, -webkit-transform ease-in-out 150ms;
+    transform: scale(0, 1);
     transition: transform ease-in-out 150ms, opacity ease-in-out 150ms;
-    transition: transform ease-in-out 150ms, opacity ease-in-out 150ms, -webkit-transform ease-in-out 150ms;
   }
   .nav-item:hover::before {
-    -webkit-transform: scale(1, 1);
-            transform: scale(1, 1);
+    transform: scale(1, 1);
     opacity: 1;
   }
+
   .hero-title {
     font-size: 6rem;
   }
+
   .hero-subtitle {
     width: 80%;
     line-height: 2;
     font-size: 1.25rem;
     color: rgba(255, 255, 255, 0.8);
-    -webkit-transition: color 150ms ease;
     transition: color 150ms ease;
     margin: 0 2rem 0 auto;
     max-width: 100%;
   }
+
   .hero-subtitle:hover {
-    color: white;
+    color: rgba(255, 255, 255, 1);
   }
+
   .about {
     position: relative;
   }
+
   .icon-size {
-    font-size: 4rem;
+    font-size: $iconSizeSm;
   }
+
   .about::before {
     content: '';
-    background: radial-gradient(circle at top left, #3523aa, rgba(53, 35, 170, 0.7));
+    background: radial-gradient(circle at top left, rgb(53, 35, 170), rgba(53, 35, 170, 0.7));
     -webkit-clip-path: polygon(0 0, 0% 100%, 100% 0);
     clip-path: polygon(0 0, 0% 100%, 100% 0);
     width: 500px;
@@ -666,9 +595,10 @@ footer h6 a:link {
     top: 0;
     position: absolute;
   }
+
   .about::after {
     content: '';
-    background: radial-gradient(circle at bottom right, #3523aa, rgba(53, 35, 170, 0.7));
+    background: radial-gradient(circle at bottom right, rgb(53, 35, 170), rgba(53, 35, 170, 0.7));
     -webkit-clip-path: polygon(100% 0, 0% 100%, 100% 100%);
     clip-path: polygon(100% 0, 0% 100%, 100% 100%);
     width: 500px;
@@ -677,92 +607,84 @@ footer h6 a:link {
     bottom: 0;
     position: absolute;
   }
+
   .project-pic {
     width: 100%;
   }
+
   .row header {
     position: relative;
   }
+
   .gallery {
     padding: 2em;
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-gap: 3.5rem;
   }
+
   .row {
     margin: 0;
+    
+    a {
+      color: black;
+    }
   }
-  .row a {
-    color: black;
-  }
+
   .project-links {
     max-width: 100%;
     background: transparent;
     opacity: 0;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    justify-content: space-around;
     position: absolute;
     top: 35%;
     right: 0;
     left: 0;
     bottom: 0;
-    -webkit-transition: opacity 300ms ease;
     transition: opacity 300ms ease;
   }
+
   .gallery header:hover .project-links {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0, 0, 0, 0.85)));
-    background-image: linear-gradient(180deg, transparent, rgba(0, 0, 0, 0.85));
+    background-image: linear-gradient(180deg, transparent, rgba(0, 0, 0, .85));
     opacity: 1;
   }
+
   .img-description {
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
+    align-self: center;
     display: inline-block;
-    -webkit-transition: 150ms ease;
     transition: 150ms ease;
     font-weight: 300;
     letter-spacing: 1px;
   }
+  
   .project-icon-github {
     color: white;
     font-size: 3rem;
-    -webkit-transition: 250ms ease;
     transition: 250ms ease;
   }
+
   .live-site:hover {
     background: #222;
     color: white;
   }
+
   .project-icon-github:hover {
     color: #ddd;
   }
+
   form {
     max-width: 600px;
   }
 }
 
-@-webkit-keyframes slide-in {
-  0% {
-    opacity: 0;
-    margin-left: -30rem;
-  }
-  100% {
-    opacity: 1;
-    margin-left: 2rem;
-  }
-}
 
 @keyframes slide-in {
   0% {
     opacity: 0;
     margin-left: -30rem;
-  }
+  } 
   100% {
     opacity: 1;
     margin-left: 2rem;
   }
 }
-/*# sourceMappingURL=style.css.map */
