--- a/css/style.scss
+++ b/css/style.scss
@@ -483,20 +483,19 @@ footer {
   background-color: #262626;
   color: #9E9E9E;
   text-align: center;
-}
+  p, h6 {
+    color: rgba(255, 255, 255, 1);
+    font-size: .7rem;
+    padding: 1rem 0;
+    transition: color 250ms ease;
+    &:hover {
+      color: #ccc;
+    }
+  }
 
-footer p, footer h6 {
-  color: rgba(255, 255, 255, 1);
-  font-size: .7rem;
-  padding: 1rem 0;
-}
-
-footer:hover,footer h6 a:hover {
-  color: #eee;
-}
-
-footer h6 a:link {
-  color: #9E9E9E;
+  h6 a:link {
+    color: white;
+  }
 }
 
 @media screen and (min-width: 375px) {
@@ -509,53 +508,62 @@ footer h6 a:link {
   .about ul li {
     display: inline-block;
   }
-  .nav-toggle-label {
-    display: none;
-  }
+
   .nav-header {
     display: grid;
     grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr;
-  }
-  .logo {
-    grid-column: 2 / span 1;
-    align-self: center;
-  }
-  .nav-menu {
-    all: unset;
-    grid-column: 3 / 4;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-  .nav-item {
-    opacity: 1;
-    position: relative;
-  }
-  .nav-menu ul {
-    display: flex;
-    justify-content: flex-end;
-  }
-  .nav-menu li {
-    margin-left: 3em;
-    margin-bottom: 0;
-  }
-  .nav-item::before {
-    background: $textDark;
-    background: rgb(53, 35, 170);
-    content: '';
-    display: block;
-    height: 3px;
-    position: absolute;
-    top: -.5rem;
-    left: 0;
-    right: 0;
-    opacity: 0;
-    transform: scale(0, 1);
-    transition: transform ease-in-out 150ms, opacity ease-in-out 150ms;
-  }
-  .nav-item:hover::before {
-    transform: scale(1, 1);
-    opacity: 1;
+
+    .logo {
+      grid-column: 2 / span 1;
+      align-self: center;
+    }
+
+    .nav-menu {
+      all: unset;
+      grid-column: 3 / 4;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+
+      ul {
+        display: flex;
+        justify-content: flex-end;
+
+        li {
+          margin-left: 3em;
+          margin-bottom: 0;
+        }
+      }
+
+      .nav-item {
+        opacity: 1;
+        position: relative;
+
+        &::before {
+          background: $textDark;
+          background: rgb(53, 35, 170);
+          content: '';
+          display: block;
+          height: 3px;
+          position: absolute;
+          top: -.5rem;
+          left: 0;
+          right: 0;
+          opacity: 0;
+          transform: scale(0, 1);
+          transition: transform ease-in-out 150ms, opacity ease-in-out 150ms;
+        }
+
+        &:hover::before {
+          transform: scale(1, 1);
+          opacity: 1;
+        }
+      }
+    }
+
+    .nav-toggle-label {
+      display: none;
+    }
   }
 
   .hero-title {
@@ -578,34 +586,34 @@ footer h6 a:link {
 
   .about {
     position: relative;
+
+    &::before {
+      content: '';
+      background: radial-gradient(circle at top left, rgb(53, 35, 170), rgba(53, 35, 170, 0.7));
+      -webkit-clip-path: polygon(0 0, 0% 100%, 100% 0);
+      clip-path: polygon(0 0, 0% 100%, 100% 0);
+      width: 500px;
+      height: 200px;
+      left: 0;
+      top: 0;
+      position: absolute;
+    }
+
+    &::after {
+      content: '';
+      background: radial-gradient(circle at bottom right, rgb(53, 35, 170), rgba(53, 35, 170, 0.7));
+      -webkit-clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+      clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+      width: 500px;
+      height: 200px;
+      right: 0;
+      bottom: 0;
+      position: absolute;
+    }
   }
 
   .icon-size {
     font-size: $iconSizeSm;
-  }
-
-  .about::before {
-    content: '';
-    background: radial-gradient(circle at top left, rgb(53, 35, 170), rgba(53, 35, 170, 0.7));
-    -webkit-clip-path: polygon(0 0, 0% 100%, 100% 0);
-    clip-path: polygon(0 0, 0% 100%, 100% 0);
-    width: 500px;
-    height: 200px;
-    left: 0;
-    top: 0;
-    position: absolute;
-  }
-
-  .about::after {
-    content: '';
-    background: radial-gradient(circle at bottom right, rgb(53, 35, 170), rgba(53, 35, 170, 0.7));
-    -webkit-clip-path: polygon(100% 0, 0% 100%, 100% 100%);
-    clip-path: polygon(100% 0, 0% 100%, 100% 100%);
-    width: 500px;
-    height: 200px;
-    right: 0;
-    bottom: 0;
-    position: absolute;
   }
 
   .project-pic {
@@ -642,6 +650,16 @@ footer h6 a:link {
     left: 0;
     bottom: 0;
     transition: opacity 300ms ease;
+
+    .project-icon-github {
+      color: white;
+      font-size: 3rem;
+      transition: 250ms ease;
+
+      &:hover {
+        color: #ddd;
+      }
+    }
   }
 
   .gallery header:hover .project-links {
@@ -656,27 +674,16 @@ footer h6 a:link {
     font-weight: 300;
     letter-spacing: 1px;
   }
-  
-  .project-icon-github {
-    color: white;
-    font-size: 3rem;
-    transition: 250ms ease;
-  }
 
   .live-site:hover {
     background: #222;
     color: white;
   }
 
-  .project-icon-github:hover {
-    color: #ddd;
-  }
-
   form {
     max-width: 600px;
   }
 }
-
 
 @keyframes slide-in {
   0% {
